--- a/src/style/header/header.scss
+++ b/src/style/header/header.scss
@@ -14,6 +14,9 @@
    padding-top: toRem(38);
    background-color: var(--clr-dark);
    z-index: 50;
+   @media (max-width: toEm(767.98)) {
+      padding-top: 1.375rem;
+   }
    // .top-header__container
    &__container {
    }
@@ -28,7 +31,7 @@
       @media (max-width: toEm(767.98)) {
          justify-content: space-between;
          width: 50%;
-         margin-left: 42%;
+         margin-left: 44%;
       }
    }
    
@@ -39,6 +42,14 @@
       overflow: hidden;
       @media (max-width: toEm(767.98)) {
          z-index: 6;
+         height: 50px;
+         width: 50px;
+         overflow: visible;
+      }
+      img {
+         @media (max-width: toEm(767.98)) {
+            width: 50px;
+         }
       }
    }
    // .top-header__menu
@@ -111,7 +122,6 @@
       @include fluid-property("column-gap", 48, 24, 1200, 767.98);
       row-gap: toRem(10);
       @media (max-width: toEm(767.98)) {
-         margin-top: 2.8125rem;
          row-gap: toRem(48);
          flex-direction: column;
       }
@@ -176,6 +186,9 @@
 
 .bottom-header {
    padding-top: toRem(123);
+   @media (max-width: toEm(767.98)) {
+      padding-top:5.8rem;
+   }
    // .bottom-header__container
    &__container {
    }
